--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dependencies = [
     "sentencepiece>=0.2.0",
     "tensorflow_datasets>=4.9.5",
     "tensorflow>=2.16.1",
+    "wandb"
 ]
 
 [project.urls]
